monitor/traffic/node/clean APIs + Fixes
